<resources>
    <string name="app_name">Mental Calculation</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="multiply" translatable="false">x</string>
    <string name="divide" translatable="false">/</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="unauthorized_action">Unauthorized action!</string>
    <string name="delete">Delete</string>
    <string name="interrogation" translatable="false">\?</string>
    <string name="lives_interrogation">Lives: ?</string>
    <string name="play">Play</string>
    <string name="scores">Scores</string>
    <string name="validate">Validate</string>
    <string name="theo_bontemps" translatable="false">Théo BONTEMPS</string>
    <string name="developer">Developer</string>
    <string name="about">About</string>
    <string name="english">🇬🇧 English</string>
    <string name="french">🇫🇷 French</string>
    <string name="languages">Languages</string>
    <string name="progression_bar_on_the_game_activity">・Progression bar on the game activity</string>
    <string name="cards_on_the_about_activity">・Cards on the about activity</string>
    <string name="additional_features">Additional features</string>
    <string name="application_name_and_version_displayed_in_the_about_activity">・Application ID and version displayed in the about activity</string>
    <string name="application">Application</string>
    <string name="id_interrogation">ID: ?</string>
    <string name="version_interrogation">Version: ?</string>
    <string name="nickname">Nickname</string>
    <string name="score">Score</string>
    <string name="level">Level</string>
    <string name="correct_answer">Correct answer!</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="questions_interrogation">Questions: ?</string>
    <string name="dash" translatable="false">_</string>
    <string name="lives">Lives</string>
</resources>