<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_developer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/developer"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/textView_developer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theo_bontemps" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/languages"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/textView_language_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english" />

                <TextView
                    android:id="@+id/textView_language_french"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/french" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_additional_features"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/additional_features"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/textView_additional_feature_progression_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/progression_bar_on_the_game_activity" />

                <TextView
                    android:id="@+id/textView_additional_feature_app_name_and_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/application_name_and_version_displayed_in_the_about_activity" />

                <TextView
                    android:id="@+id/textView_additional_feature_cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cards_on_the_about_activity" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_application"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/application"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    android:id="@+id/textView_application_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id_interrogation" />

                <TextView
                    android:id="@+id/textView_application_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/version_interrogation" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>